--- a/index.html
+++ b/index.html
@@ -1,31 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./styles/style.css">
-  </head>
-  <body>
-    
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <section id="navigation">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navStyle">
+      <div class="container-fluid navBg">
+          <a class="navbar-brand" href="../index.html"> <img src="./assets/RestaurantMockupFiles/assets/MuzzlesLogo.png"
+          alt="This is the brands logo called Muzzles" /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false"    aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse"       id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page2" href="./pages/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page3" href="./pages/menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page4" href="./pages/catering.html">Catering</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page5" href="./pages/photos.html">Photo</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </section>
+
+  <section>
+    <div>
+      <img class="homeHeroImg"src="./assets/RestaurantMockupFiles/assets/homeHero.jpg" alt="This is an image of tables and chairs outside a restaurant"/>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <img class="homeSingleImg"src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink"/>
+    </div>
+  </section>
+
+  <section class="firstpgTxt">
+    <div>
+      <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
+      <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <img class="homeImageImg" src="./assets/RestaurantMockupFiles/assets/HomeImage.jpg" alt="This is an divided image with 3 parts, first part is a sliced panini sandwhich, second part is a dog biting onto the end piece of a fried fish, third part is a white plate with french fries and two burgers">
+    </div>
+  </section>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 
+<footer>
+  <div>
+    <h6 class="footerTxt">1357 Mutt Street, Rottweiler CA. 12345</h6>
+    <h6 class="footerTxt">Phone: 123-456-7890</h6>
+    <img class="footerLogo" src="/assets/RestaurantMockupFiles/assets/CompanyLogo.png" alt="This is a logo with a paw print called A Spaniel Company"/>
+    <h6 class="copyrightTxt">Copyright © Muzzles Restaurant</h6>
+  </div>
+</footer>
 
-
-
-
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
 </html>
