--- a/pages/photos.html
+++ b/pages/photos.html
@@ -10,10 +10,64 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="/styles/calebstyles.css">
   </head>
   <body>
     
+    <div class="container-fluid">
+        <div class="row boxSpace">
+            <div class="col text">
+                <h2>Photos</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row rowSpace">
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo01.jpg" alt="Steak" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo02.jpg" alt="Dog looking at food" width="350px" height="350px colSpace">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo03.jpg" alt="Cake" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo04.jpg" alt="Dog licking plate" width="350px" height="350px">
+            </div>
+        </div>
+
+        <div class="row rowSpace">
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo05.jpg" alt="BBQ Shrimp" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo06.jpg" alt="Ribs with Veggies" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo07.jpg" alt="Two puppies eating bread" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo08.jpg" alt="Rib rack" width="350px" height="350px">
+            </div>
+        </div>
+
+        <div class="row rowSpace">
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo09.jpg" alt="Grilled fish" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo10.jpg" alt="Brownies with Ice cream on top" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace"> 
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo11.jpg" alt="Puppy eating sandwich on table" width="350px" height="350px">
+            </div>
+            <div class="col-3 colSpace">
+                <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo12.jpg" alt="Grilled salmon" width="350px" height="350px">
+            </div>
+        </div>
+    </div>
 
 
 
