--- a/index.html
+++ b/index.html
@@ -10,62 +10,106 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
 
+<header>
   <section id="navigation">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navStyle">
-      <div class="container-fluid navBg">
-          <a class="navbar-brand" href="../index.html"> <img src="./assets/RestaurantMockupFiles/assets/MuzzlesLogo.png"
-          alt="This is the brands logo called Muzzles" /></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false"    aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+      <div class="row navRow">
+        <div class="container-fluid navBg">
+          <a class="navbar-brand" href="../index.html"> <img class="logoBrand"
+              src="./assets/RestaurantMockupFiles/assets/MuzzlesLogo.png"
+              alt="This is the brands logo called Muzzles" /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
           </button>
-        <div class="collapse navbar-collapse"       id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page2" href="./pages/about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page3" href="./pages/menu.html">Menu</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page4" href="./pages/catering.html">Catering</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page5" href="./pages/photos.html">Photo</a>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page2" href="./pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page3" href="./pages/menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page4" href="./pages/catering.html">Catering</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page5" href="./pages/photos.html">Photo</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </nav>
   </section>
+</header>
 
+<body>
   <section>
     <div>
-      <img class="homeHeroImg"src="./assets/RestaurantMockupFiles/assets/homeHero.jpg" alt="This is an image of tables and chairs outside a restaurant"/>
+      <img class="homeHeroImg" src="./assets/RestaurantMockupFiles/assets/homeHero.jpg"
+        alt="This is an image of tables and chairs outside a restaurant" />
     </div>
   </section>
+
+  <!-- <section>
+    <div class="row">
+      <div class="col homeImgCont">
+        <img class="homeSingleImg" src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"
+          alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink" />
+      </div>
+      <div class="col">
+        <div class="firstpgTxt">
+          <br>
+          <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
+          <br>
+          <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+            qui
+            officia deserunt mollit anim id est laborum.</p>
+          <div>
+            <img class="homeImageImg" src="./assets/RestaurantMockupFiles/assets/HomeImage.jpg"
+              alt="This is an divided image with 3 parts, first part is a sliced panini sandwhich, second part is a dog biting onto the end piece of a fried fish, third part is a white plate with french fries and two burgers" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </section> -->
 
   <section>
-    <div>
-      <img class="homeSingleImg"src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink"/>
-    </div>
+    <div class="container-fluid">
+      <div class="row bodyImgCont">
+        <div class="col-10 d-flex">
+          <div class="col">
+            <img class="homeSingleImg" src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"
+              alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink" />
+          </div>
+          <div class="col">
+            <div class="firstpgTxt">
+              <br>
+              <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
+              <br>
+              <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa
+                qui
+                officia deserunt mollit anim id est laborum.</p>
+              <div>
+                <img class="homeImageImg" src="./assets/RestaurantMockupFiles/assets/HomeImage.jpg"
+                  alt="This is an divided image with 3 parts, first part is a sliced panini sandwhich, second part is a dog biting onto the end piece of a fried fish, third part is a white plate with french fries and two burgers" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   </section>
-
-  <section class="firstpgTxt">
-    <div>
-      <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
-      <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-  </section>
-
-  <section>
-    <div>
-      <img class="homeImageImg" src="./assets/RestaurantMockupFiles/assets/HomeImage.jpg" alt="This is an divided image with 3 parts, first part is a sliced panini sandwhich, second part is a dog biting onto the end piece of a fried fish, third part is a white plate with french fries and two burgers">
-    </div>
-  </section>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -73,10 +117,11 @@
 </body>
 
 <footer>
-  <div>
+  <div class="row">
     <h6 class="footerTxt">1357 Mutt Street, Rottweiler CA. 12345</h6>
     <h6 class="footerTxt">Phone: 123-456-7890</h6>
-    <img class="footerLogo" src="/assets/RestaurantMockupFiles/assets/CompanyLogo.png" alt="This is a logo with a paw print called A Spaniel Company"/>
+    <img class="footerLogo" src="/assets/RestaurantMockupFiles/assets/CompanyLogo.png"
+      alt="This is a logo with a paw print called A Spaniel Company" />
     <h6 class="copyrightTxt">Copyright © Muzzles Restaurant</h6>
   </div>
 </footer>
