--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section id="navigation">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navStyle">
       <div class="row navRow">
-        <div class="container-fluid navBg">
+        <div class="navBg">
           <a class="navbar-brand" href="../index.html"> <img class="logoBrand"
               src="./assets/RestaurantMockupFiles/assets/MuzzlesLogo.png"
               alt="This is the brands logo called Muzzles" /></a>
@@ -54,45 +54,18 @@
     </div>
   </section>
 
-  <!-- <section>
-    <div class="row">
-      <div class="col homeImgCont">
-        <img class="homeSingleImg" src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"
-          alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink" />
-      </div>
-      <div class="col">
-        <div class="firstpgTxt">
-          <br>
-          <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
-          <br>
-          <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui
-            officia deserunt mollit anim id est laborum.</p>
-          <div>
-            <img class="homeImageImg" src="./assets/RestaurantMockupFiles/assets/HomeImage.jpg"
-              alt="This is an divided image with 3 parts, first part is a sliced panini sandwhich, second part is a dog biting onto the end piece of a fried fish, third part is a white plate with french fries and two burgers" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <section>
     <div class="container-fluid">
       <div class="row bodyImgCont">
-        <div class="col-10 d-flex">
-          <div class="col">
+        <div class="col d-flex">
+          <div class="col homeImgCont">
             <img class="homeSingleImg" src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"
               alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink" />
           </div>
-          <div class="col">
+          <div class="col firstpgTxtCont">
             <div class="firstpgTxt">
               <br>
               <h1 class="firstpgHeadertxt">Muzzles Sandwiches & Grill</h1>
-              <br>
               <p class="firstpgPgtxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
