fix empty space

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
             width="100%"
           />
         </div>
-        <div class="col-8">
+        <div class="col-sm-12 col-md-10 col-lg-8">
           <div class="textbox">
             <h1>The Story Behind the Grill</h1>
             <p>
