--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header>
   <section id="navigation">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navStyle">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navBg">
       <div class="row navRow">
         <div class="navBg">
           <a class="navbar-brand" href="../index.html"> <img class="logoBrand"
@@ -55,7 +55,7 @@
   </section>
 
   <section>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row bodyImgCont">
         <div class="col d-flex">
           <div class="col homeImgCont">
