--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header>
   <section id="navigation">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navBg">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navStyle">
       <div class="row navRow">
         <div class="navBg">
           <a class="navbar-brand" href="../index.html"> <img class="logoBrand"
@@ -54,11 +54,11 @@
     </div>
   </section>
 
+
   <section>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row bodyImgCont">
-        <div class="col d-flex">
-          <div class="col homeImgCont">
+          <div class="col homSingImgCont">
             <img class="homeSingleImg" src="./assets/RestaurantMockupFiles/assets/homeSingle.jpg"
               alt="This is an image of a meal on a wooden platter with french fries, a sliced sandwhich, and a drink" />
           </div>
