--- a/pages/photos.html
+++ b/pages/photos.html
@@ -14,8 +14,34 @@
   </head>
   <body>
     
-    <div class="container-fluid cont-box">
+   <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img class="img-fluid" src="/assets/RestaurantMockupFiles/assets/MuzzlesLogo.png" alt="Muzzle's logo" width="150px">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pages/catering.html">Catering</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/pages/photos.html">Photos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
+    <div class="container-fluid cont-box">
         <div class="row boxSpace">
             <div class="col text">
                 <h2>Photos</h2>
@@ -68,14 +94,21 @@
                 <img class="img-fluid sizeImg" src="/assets/RestaurantMockupFiles/assets/photo12.jpg" alt="Grilled salmon" width="100%" height="100%">
             </div>
         </div>
+        <div class="container-fluid footBox">
+            <footer>
+                <div class="row flexMe">
+                    <div class="col-6 left">
+                        <p>1357 Mutt Street, Rottweiler CA. 12345</p>
+                        <p>Phone: 123-456-7890</p>
+                    </div>
+                    <div class="col-6 right">
+                        <img src="/assets/RestaurantMockupFiles/assets/CompanyLogo.png" alt="Company Logo" width="100px">
+                        <p>Copyright &copy; Muzzles Restaraunt</p>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
-
-
-
-
-
-
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
