--- a/pages/catering.html
+++ b/pages/catering.html
@@ -16,6 +16,36 @@
   <body>
 <div class="containerBody-fluid">
   
+<!-- Footer start -->
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+      <img class="img-fluid" src="/assets/RestaurantMockupFiles/assets/MuzzlesLogo.png" alt="Muzzle's logo" width="150px">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/menu.html">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/pages/catering.html">Catering</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/photos.html">Photos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- Footer End -->
+
+
     <!-- Cater Header Start -->
 <div class="containerMH-fluid">
   <h1>Catering</h1>
@@ -48,19 +78,37 @@
 <!-- Catering services End -->
 
 <!-- Cater Images Start -->
-<div class="row">
-  <div class="col">
+<div class="row spaceV2">
+  <div class="col picImportantR">
     <img class="img-fluid imgCtr" src="../assets/RestaurantMockupFiles/assets/catering1.jpg" alt="">
   </div>
   <div class="col">
     <img class="img-fluid imgCtr" src="../assets/RestaurantMockupFiles/assets/catering2.jpg" alt="">
   </div>
-  <div class="col">
+  <div class="col picImportantL">
     <img class="img-fluid imgCtr" src="../assets/RestaurantMockupFiles/assets/catering3.jpg" alt="">
   </div>
 </div>
 <!-- Cater Images End -->
   
+
+<!-- Footer Start -->
+<div class="container-fluid footBox">
+  <footer>
+      <div class="row flexMe">
+          <div class="col-6 left">
+              <p>1357 Mutt Street, Rottweiler CA. 12345</p>
+              <p>Phone: 123-456-7890</p>
+          </div>
+          <div class="col-6 right">
+              <img src="/assets/RestaurantMockupFiles/assets/CompanyLogo.png" alt="Company Logo" width="100px">
+              <p>Copyright &copy; Muzzles Restaraunt</p>
+          </div>
+      </div>
+  </footer>
+</div>
+<!-- Footer End -->
+
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
