--- a/pages/photos.html
+++ b/pages/photos.html
@@ -16,8 +16,8 @@
     
    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img class="img-fluid" src="/assets/RestaurantMockupFiles/assets/MuzzlesLogo.png" alt="Muzzle's logo" width="150px">
+          <a class="navbar-brand" href="/index.html">
+            <img class="img-fluid" src="/assets/RestaurantMockupFiles/assets/MuzzlesLogo.png" alt="Muzzle's logo" width="200px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
