--- a/pages/menu.html
+++ b/pages/menu.html
@@ -54,58 +54,58 @@
 
       <!-- Sandwiches Start -->
     <div class="row spaceV">
-      <div class="col">
+      <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="row">
         <img src="../assets/RestaurantMockupFiles/assets/menubeef.jpg" alt="">
         </div>
         <div class="container-fluid" style="background-color: white;">
         <div class="row">
-          <h5>Sandwiches</h5>
+          <h5 class="menuHead">Sandwiches</h5>
           <p class="menuSub">All sandwiches come with an side of crispy fries</p>
         </div>
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Sizzling steak Sandwiach</h6>
+            <h5>Sizzling Steak Sandwiach</h5>
             <p>Open faced steak sandwich with grilled belle peppers and fried onions.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$15.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$15.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Tenderloin Sliders</h6>
+            <h5>Tenderloin Sliders</h5>
             <p>Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$13.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$13.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Classic Chicken Panini</h6>
+            <h5>Classic Chicken Panini</h5>
             <p>Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$10.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$10.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Smoked Turkey Club</h6>
+            <h5>Smoked Turkey Club</h5>
             <p>Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$8.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$8.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Tuna Sandwich</h6>
+            <h5>Tuna Sandwich</h5>
             <p>Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$6.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$6.99</h5></div>
         </div>
         </div>
       </div>
@@ -116,55 +116,53 @@
         <div class="row">
         <img src="../assets/RestaurantMockupFiles/assets/menuseafood.jpg" alt="">
         </div>
-        <div class="container-fluid" style="background-color: white;">
+        <div class="container-fluid" style="background-color: white; min-height: 74%;">
         <div class="row">
-          <h5>Seafood</h5>
+          <h5 class="menuHead">Seafood</h5>
           <p class="menuSub">All seafood comes with a side of rice pilaf and grilled vegetables</p>
         </div>
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Honey Shrimp Skewers</h6>
+            <h5>Honey Shrimp Skewers</h5>
             <p>Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$15.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$15.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Grilled Salmon Salmon</h6>
+            <h5>Grilled Salmon Salmon</h5>
             <p>grilled in a lime butter sauce.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$13.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$13.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Grilled Tilapia</h6>
+            <h5>Grilled Tilapia</h5>
             <p>A whole grilled tilapia cooked with smoked paprika.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$10.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$10.99</h5></div>
         </div>
 
-        <div class="row">
+        <div class="row padTest">
           <div class="col-10 menuSub">
-            <h6>Parmesan Fish Sticks</h6>
+            <h5>Parmesan Fish Sticks</h5>
             <p>Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$8.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$8.99</h5></div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-10 menuSub">
-            <h6>Sizzling steak Sandwiach</h6>
-            <p>Open faced steak sandwich with grilled belle peppers and fried onions.</p>
-            <hr>
+            
           </div>
-          <div class="col-2 menuPrice"><h6>$15.99</h6></div>
-        </div>
+          
+        </div> -->
         </div>
       </div>
 <!-- Seafood End -->
@@ -172,58 +170,58 @@
 
     <!-- On The Grill Start -->
     <div class="row spaceV2">
-      <div class="col">
+      <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="row">
         <img src="../assets/RestaurantMockupFiles/assets/menumeat.jpg" alt="">
         </div>
         <div class="container-fluid" style="background-color: white;">
         <div class="row">
-          <h5>On the grill</h5>
+          <h5 class="menuHead">On the grill</h5>
           <p class="menuSub">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
         </div>
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Baby Back - Full Rack</h6>
+            <h5>Baby Back - Full Rack</h5>
             <p>A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$19.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$19.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Baby Back - Half Rack</h6>
+            <h5>Baby Back - Half Rack</h5>
             <p>A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$13.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$13.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Boneless Ribeye</h6>
+            <h5>Boneless Ribeye</h5>
             <p>A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$25.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$25.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Smoked Turkey Club</h6>
+            <h5>Smoked Turkey Club</h5>
             <p>Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$8.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$8.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Tuna Sandwich</h6>
+            <h5>Tuna Sandwich</h5>
             <p>Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$6.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$6.99</h5></div>
         </div>
         </div>
       </div>
@@ -236,52 +234,52 @@
         </div>
         <div class="container-fluid" style="background-color: white;">
         <div class="row">
-          <h5>Desserts</h5>
+          <h5 class="menuHead">Desserts</h5>
           <p class="menuSub">A shot of esspresso can be added to any dessert for an additional $2.</p>
         </div>
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Double Walnut Brownies</h6>
+            <h5>Double Walnut Brownies</h5>
             <p>Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$8.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$8.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Cheese Cake with Chocolate Sauce</h6>
+            <h5>Cheese Cake with Chocolate Sauce</h5>
             <p>Cheesecake with ice cream, chocolate shavings and chocolate sauce.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$7.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$7.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Tripple Chocolate Brownie</h6>
+            <h5>Tripple Chocolate Brownie</h5>
             <p>A tripple chocolate brownie served with vanilla ice cream and walnuts.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$6.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$6.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>House Made Shaved Gelato and Cookies</h6>
+            <h5>House Made Shaved Gelato and Cookies</h5>
             <p>Your choice of shaved gelato with whole cookies. Options change daily.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$5.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$5.99</h5></div>
         </div>
 
         <div class="row">
           <div class="col-10 menuSub">
-            <h6>Grilled Peaches and Ice Cream</h6>
+            <h5>Grilled Peaches and Ice Cream</h5>
             <p>Grilled peaches in cinnamon and brown sugar glaze with ice cream.</p>
             <hr>
           </div>
-          <div class="col-2 menuPrice"><h6>$4.99</h6></div>
+          <div class="col-2 menuPrice"><h5>$4.99</h5></div>
         </div>
         </div>
       </div>
