--- a/pages/catering.html
+++ b/pages/catering.html
@@ -59,15 +59,15 @@
       <!-- Catering Services Start -->
   
 <div class="row caterHero">
-  <div class="col-5 ">
-    <img class="img-fluid" src="../assets/RestaurantMockupFiles/assets/cateringMaine.jpg" alt="">
+  <div class="col-5">
+    <img class="img-fluid imgHide" src="../assets/RestaurantMockupFiles/assets/cateringMaine.jpg" alt="">
   </div>
   
  
-  <div class="col-7"  >
+  <div class="col-lg-7  col-md-12 col-sm-12">
 <div class="container-fluid txtFit" style="background-color: white;">
-    <h4>Our Catering Services</h4>
-    <p class="caterTxt">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin sed libero enim sed faucibus turpis in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit amet. Ultricies tristique nulla aliquet enim tortor at auctor urna. Purus faucibus ornare suspendisse sed. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Sed cras ornare arcu dui vivamus arcu felis. Consectetur lorem donec massa sapien faucibus et molestie ac. Cum sociis natoque penatibus et magnis dis parturient. Ut faucibus pulvinar elementum integer enim. Vel risus commodo viverra maecenas accumsan. Nec dui nunc mattis enim ut.
+    <h5 class="ourCSH">Our Catering Services</h5>
+    <p class="caterTxt ourCSP">Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin sed libero enim sed faucibus turpis in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit amet. Ultricies tristique nulla aliquet enim tortor at auctor urna. Purus faucibus ornare suspendisse sed. Tempor nec feugiat nisl pretium fusce id velit ut tortor. Sed cras ornare arcu dui vivamus arcu felis. Consectetur lorem donec massa sapien faucibus et molestie ac. Cum sociis natoque penatibus et magnis dis parturient. Ut faucibus pulvinar elementum integer enim. Vel risus commodo viverra maecenas accumsan. Nec dui nunc mattis enim ut.
       <br>
       <br>
       Posuere lorem ipsum dolor sit amet. Sed odio morbi quis commodo odio aenean. Tortor posuere ac ut consequat semper viverra nam libero. Tellus elementum sagittis vitae et leo duis ut. Egestas quis ipsum suspendisse ultrices gravida. Tempor commodo ullamcorper a lacus vestibulum sed arcu non odio. Auctor augue mauris augue neque gravida in fermentum et sollicitudin. Augue neque gravida in fermentum et sollicitudin ac orci phasellus. Tristique senectus et netus et. Dolor sit amet consectetur adipiscing elit ut aliquam. Erat nam at lectus urna duis convallis convallis tellus. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices.</p>
@@ -117,3 +117,6 @@
     ></script>
   </body>
 </html>
+
+
+
